# ECE408_Applied_Parallel_Programming

./: .gitignore  CMakeLists.txt  README.md
MP0/: template.cu
MP1/: MP1  run_datasets  template.cu
MP1/data/0/: sol.raw
MP1/data/1/: sol.raw
MP1/data/2/: sol.raw
MP1/data/3/: sol.raw
MP1/data/4/: sol.raw
MP1/data/5/: sol.raw
MP1/data/6/: sol.raw
MP1/data/7/: sol.raw
MP1/data/8/: sol.raw
MP1/data/9/: sol.raw
MP2/: run_datasets  template.cu
MP2/data/0/: res.raw
MP2/data/1/: res.raw
MP2/data/2/: res.raw
MP2/data/3/: res.raw
MP2/data/4/: res.raw
MP2/data/5/: res.raw
MP2/data/6/: res.raw
MP2/data/7/: res.raw
MP2/data/8/: res.raw
MP2/data/9/: res.raw
MP3/: run_datasets  template.cu
MP4/: run_datasets  template.cu
MP5.1/: run_datasets  template.cu
MP5.2/: run_datasets  template.cu  template_bk.cu
MP6/: run_datasets  template.cu
